Refactor GraphServiceClientProvider initialization to use lazy loading pattern